# sealchain-crypto

./: .gitignore  .haskell-ci  .travis.yml  LICENSE  README.md  sealchain-crypto.cabal  stack.yaml
benchs/: Bench.hs
cbits/: encrypted_sign.c
cbits/ed25519/: ed25519.c  ed25519.h
src/Crypto/ECC/: Ed25519Donna.hs
src/Crypto/Encoding/: BIP39.hs
src/Seal/Crypto/: Wallet.hs
src/Seal/Crypto/Encoding/: BIP39.hs  Seed.hs
src/Seal/Crypto/Praos/: VRF.hs
src/Seal/Crypto/Wallet/: Encrypted.hs  Pure.hs  Types.hs
src/Seal/Internal/: Compat.hs
test/: GoldenTest.hs  Spec.hs  Utils.hs
test/Test/: Cardano.hs  Orphans.hs
test/Test/Crypto/Encoding/: BIP39.hs
test/Test/Seal/: Crypto.hs
test/Test/Seal/Crypto/: Encoding.hs  Praos.hs
test/Test/Seal/Crypto/Encoding/: Seed.hs
test/Test/Seal/Crypto/Praos/: VRF.hs
tests/goldens/seal/crypto/: scramble128
