name:                sealchain-crypto
version:             1.1.0
description:
license:             MIT
license-file:        LICENSE
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag golden-tests
  description:       compile the golden tests and run them
  default:           False
  manual:            True

flag golden-tests-exe
  description:       compile the golden test binary allowing to generate pretty markdown output
  default:           False
  manual:            True

library
  hs-source-dirs:      src
  exposed-modules:     Seal.Crypto.Wallet
                       Seal.Crypto.Wallet.Encrypted
                       Seal.Crypto.Wallet.Types
                       Seal.Crypto.Wallet.Pure
                       Seal.Crypto.Encoding.BIP39
                       Seal.Crypto.Encoding.Seed
                       Seal.Crypto.Praos.VRF
                       Crypto.Math.Edwards25519
                       Crypto.Math.Bits
                       Crypto.Math.Bytes
                       Crypto.Math.NatMath
                       Crypto.ECC.Ed25519Donna
                       Crypto.ECC.Ed25519BIP32
                       Crypto.ECC.P256
                       Crypto.DLEQ
                       Crypto.Encoding.BIP39
                       Crypto.Encoding.BIP39.Dictionary
                       Crypto.Encoding.BIP39.English
                       Seal.Internal.Compat
  build-depends:       base >= 4.7 && < 5
                     , memory
                     , deepseq
                     , bytestring
                     , basement
                     , foundation
                     , cryptonite >= 0.22
                     , cryptonite-openssl >= 0.5
                     , hashable
                     , integer-gmp
  default-language:    Haskell2010
  C-sources:           cbits/ed25519/ed25519.c
                       cbits/encrypted_sign.c
  include-dirs:        cbits/ed25519 cbits
  default-extensions:  GeneralizedNewtypeDeriving
  ghc-options:         -Wall
  cc-options:          -Wall -Wno-unused-function
  if impl(ghc >= 8.6)
    default-extensions: NoStarIsType

test-suite sealchain-crypto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Crypto
                       Test.Crypto.Encoding
                       Test.Crypto.Encoding.BIP39
                       Test.Seal
                       Test.Seal.Crypto
                       Test.Seal.Crypto.Encoding
                       Test.Seal.Crypto.Encoding.Seed
                       Test.Seal.Crypto.Praos
                       Test.Seal.Crypto.Praos.VRF
                       Utils
  build-depends:       base
                     , bytestring
                     , memory
                     , cryptonite
                     , sealchain-crypto
                     , basement
                     , foundation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite sealchain-crypto-golden-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             GoldenTest.hs
  other-modules:       Test.Orphans
  build-depends:       base
                     , basement
                     , foundation
                     , memory
                     , bytestring
                     , cryptonite
                     , sealchain-crypto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010
  if flag(golden-tests)
    build-depends:     inspector
    buildable:         True
  else
    buildable:         False

executable golden-tests
  hs-source-dirs:      test
  main-is:             GoldenTest.hs
  other-modules:       Test.Orphans
  if flag(golden-tests-exe)
    build-depends:     inspector
    buildable:         True
  else
    buildable:         False
  build-depends:       base
                     , basement
                     , foundation
                     , memory
                     , bytestring
                     , cryptonite
                     , sealchain-crypto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

benchmark sealchain-crypto-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchs
  Main-is:             Bench.hs
  build-depends:       base
                     , bytestring
                     , memory
                     , cryptonite
                     , sealchain-crypto
                     , gauge
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
